--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <dt>LICENSES</dt>
                         <dd>웹디자인기능사</dd>
                         <dd>운전면허 1종 보통</dd>
-                        <dd>JLPT N3</dd>
+                        <dd>JLPT&nbsp;&nbsp;N3</dd>
                         <dd>건축설비산업기사</dd>
                     </dl>
                 </div>
@@ -167,37 +167,37 @@
                         </p>
                     </dd>
                 </dl>
-                <!-- 롯데월드 : 이미지 왼 -->
+                <!-- 라인 : 이미지 왼 -->
                 <dl>
                     <dt></dt>
                     <dd>
-                        <h4>03. 롯데월드</h4>
-                        <h5>HANHWA <br /> CHEMICAL</h5>
+                        <h4>03. 라인 홈페이지</h4>
+                        <h5>LINE</h5>
                         <p>
-                            WEB CODING <br />
+                            RESPONSIVE WEB CODING <br />
                             제작 : 메인페이지 <br /> <br /> <br />
-                            리뉴얼된 한화케미칼 메인페이지를 직접 코딩하여 <br />
-                            웹으로 구현하였습니다.
+                            라인 홈페이지를 <br />
+                            반응형 웹으로 구현하였습니다.
                         </p>
                         <p class="site_btn">
-                            <a href="https://tmdslek.github.io/hanhwa/" target="_blink">WEBSITE</a>
+                            <a href="https://tmdslek.github.io/LINE/" target="_blink">WEBSITE</a>
                         </p>
                     </dd>
                 </dl>
-                <!-- CGV : 이미지 오 -->
+                <!-- 윅스(WIX) : 이미지 오 -->
                 <dl>
                     <dt></dt>
                     <dd>
-                        <h4>04. CGV</h4>
-                        <h5>HANHWA <br /> CHEMICAL</h5>
+                        <h4>04. WIX 홈페이지 제작 툴</h4>
+                        <h5>WIX</h5>
                         <p>
-                            WEB CODING <br />
+                            
                             제작 : 메인페이지 <br /> <br /> <br />
-                            리뉴얼된 한화케미칼 메인페이지를 직접 코딩하여 <br />
-                            웹으로 구현하였습니다.
+                            WIX 사이트 제작 툴을 이용하여 <br />
+                            메인페이지를 제작하였습니다.
                         </p>
                         <p class="site_btn">
-                            <a href="https://tmdslek.github.io/hanhwa/" target="_blink">WEBSITE</a>
+                            <a href="https://tmdslek.wixsite.com/album" target="_blink">WEBSITE</a>
                         </p>
                     </dd>
                 </dl>
@@ -214,7 +214,8 @@
                             웹으로 구현하였습니다.
                         </p>
                         <p class="site_btn">
-                            <a href="https://tmdslek.github.io/LINE/" target="_blink">WEBSITE</a>
+                            <a href="https://tmdslek.github.io/LINE/" target="_blink">GRID</a>
+                            <a href="https://tmdslek.github.io/LINE/" target="_blink">DOWN</a>
                         </p>
                     </dd>
                 </dl>
@@ -333,8 +334,8 @@
             <!-- Phone, Mail -->
                 <ul class="sns">
                     <li class="fl"><a href="tel:010-9787-8762"><i class="xi-mobile"></i></a></li>
-                    <li class="fl"><a href="tmdslek@naver.com"><i class="xi-mobile"></i></a></li>
-                    <li class="fl"><a href="tmdslek@gmail.com"><i class="xi-mobile"></i></a></li>
+                    <li class="fl"><a href="mailto:tmdslek@naver.com" target="_top"><i class="xi-mobile"></i></a></li>
+                    <li class="fl"><a href="mailto:tmdslek@gmail.com" target="_top"><i class="xi-mobile"></i></a></li>
                 </ul>
                 <!-- copyright -->
                 <div class="copy">
